@@ -2,7 +2,7 @@
 	<qresource>
 		<file>images/ledOn.png</file>
 		<file>images/ledOff.png</file>
-		<file>images/playElement.png</file>
+		<file>images/playSample.png</file>
 		<file>images/presetNew.png</file>
 		<file>images/presetOpen.png</file>
 		<file>images/presetSave.png</file>
